--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -99,3 +99,22 @@ header .content {
 .photo-4 {
     height: 400px;
 }
+
+.footer {
+    height: auto;
+    display: block;
+}
+
+.footer p, .footer a {
+    color: rgba(255,255,255,0.7);
+}
+
+.footer p {
+    margin-left: 9rem;
+}
+
+.footer_links {
+    margin: 2rem auto;
+    display: flex;
+    justify-content: space-around;
+}
