--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,11 @@
 .App {
   background-color: #111;
   color: #fff;
+  width: 100%;
+}
+
+@media only screen and (max-width: 450px) {
+  .App {
+      width: 109%;
+  }
 }
