--- a/src/Privacy.css
+++ b/src/Privacy.css
@@ -30,3 +30,28 @@
     font-size: 24px;
     margin-right: 0.3rem;
 }
+
+
+
+@media only screen and (max-width: 768px) {
+    .title {
+        font-size: 1.7rem;
+    }
+
+    .main button {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+
+    .main {
+        margin: 1rem;
+        padding: 1rem;
+    }
+
+    .title {
+        font-size: 1.5rem;
+        margin-top: 3rem;
+    }
+}
